<resources>
    <string name="app_name">COVID-19 Tracking</string>
    <string name="title_home">Global</string>
    <string name="title_dashboard">Countries</string>
    <string name="title_notifications">Graphs</string>
    <string name="total_cases_title">Total Cases</string>
    <string name="deaths_title">Deaths</string>
    <string name="recovered_title">Recovered</string>
    <string name="last_update_date">Last Update:</string>
    <string name="search">Search</string>
    <string name="appbar_refresh">Refresh</string>
    <string name="appbar_about">About</string>
    <string name="global_cases_string">Global Cases</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="total_recovered">Total Recovered</string>
    <string name="global_graph_description">COVID-19 Timeline</string>
    <string name="since_yesterday">+%s%% since yesterday</string>
    <string name="sort">Sort</string>
    <string name="settings">Settings</string>
    <string name="night_mode">Night Mode</string>
    <string name="percentage_example">50% since someday</string>
    <string name="global">Global</string>
    <string name="piechart_dataset_label">Global COVID-19 Progression</string>
    <string name="settings_activity_label">Settings</string>
    <string name="custom_covid_card_default_title">Title</string>
</resources>
