<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/appbar_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_black_24dp"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/appbar_refresh"
        android:title="@string/appbar_refresh"
        app:showAsAction="never"/>

    <item
        android:id="@+id/appbar_sort"
        android:title="@string/sort"
        android:icon="@drawable/ic_sort_black_24dp"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/appbar_about"
        android:title="@string/appbar_about"
        app:showAsAction="never"/>

</menu>