<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:animateLayoutChanges="true">

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/circular_chart"
            android:layout_width="@dimen/pie_chart_size"
            android:layout_height="@dimen/pie_chart_size"
            android:layout_marginStart="@dimen/parent_left_right_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/last_update_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/parent_left_right_margin"
            android:layout_marginBottom="?attr/actionBarSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Date" />

        <TextView
            android:id="@+id/last_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/parent_left_right_margin"
            android:layout_marginBottom="?attr/actionBarSize"
            android:text="@string/last_update_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cases_numbers_size"
            android:text="@string/global"
            android:textSize="@dimen/title_size"
            android:textColor="?android:attr/textColorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title" />


        <com.example.ncov19traking.ui.CovidCustomCard
            android:id="@+id/covid_total_cases_card"
            android:layout_width="@dimen/cards_width"
            android:layout_height="@dimen/cards_height"
            android:layout_marginTop="@dimen/cards_margin_parent_top"
            android:layout_marginEnd="@dimen/parent_left_right_margin"
            app:titleText="@string/total_cases_title"
            app:caseNumberTextColor="@color/textColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.ncov19traking.ui.CovidCustomCard
            android:id="@+id/covid_recovered_cases_card"
            android:layout_width="@dimen/cards_width"
            android:layout_height="@dimen/cards_height"
            android:layout_marginTop="@dimen/cards_margin_parent_top"
            android:layout_marginEnd="@dimen/parent_left_right_margin"
            app:titleText="@string/recovered_title"
            app:caseNumberTextColor="@color/recoveredColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/covid_total_cases_card"/>

        <com.example.ncov19traking.ui.CovidCustomCard
            android:id="@+id/covid_deaths_cases_card"
            android:layout_width="@dimen/cards_width"
            android:layout_height="@dimen/cards_height"
            android:layout_marginTop="@dimen/cards_margin_parent_top"
            android:layout_marginEnd="@dimen/parent_left_right_margin"
            android:layout_marginBottom="@dimen/cards_margin_bottom_from_parent"
            app:titleText="@string/deaths_title"
            app:caseNumberTextColor="@color/deathsColor"
            app:layout_constraintBottom_toTopOf="@+id/last_update_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/covid_recovered_cases_card"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>